# anki-helper

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.docker/: README.md
.docker/compose/: docker-compose.agent.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
.docker/configs/monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
.docker/services/backend/: Dockerfile
.docker/services/frontend/: Dockerfile  nginx.conf
.docker/services/local-agent/: Dockerfile
.docker/services/nginx/: nginx.conf
docs/: SPECIFICATION.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  cards.js  chat.js  client.js  decks.js  generation.js  index.js
frontend/src/assets/: main.css
frontend/src/router/: index.js
frontend/src/stores/: auth.js  cards.js  decks.js  index.js  ui.js
frontend/src/views/: ChatView.vue  DashboardView.vue  DeckDetailView.vue  DecksView.vue  GenerateView.vue  LoginView.vue  RegisterView.vue  SettingsView.vue
local-agent/: .gitignore  README.md  pyproject.toml
local-agent/src/: __init__.py  main.py
local-agent/src/clients/: __init__.py  anki_client.py  api_client.py
local-agent/src/config/: __init__.py  settings.py  token_manager.py
local-agent/src/core/: __init__.py  exceptions.py  import_cache.py  models.py  sync_service.py
local-agent/src/ui/: __init__.py  main_window.py
scripts/: dev.sh  docker-down.sh  docker-up.sh  import_from_anki.py  lint.sh  migrate.sh  test.sh
src/: __init__.py  main.py
src/api/: __init__.py  auth.py  cards.py  chat.py  decks.py  generation.py  prompts.py  rag.py  sync.py  system.py  templates.py  users.py
src/core/: __init__.py  cache.py  config.py  database.py  dependencies.py  exceptions.py  llm_client.py  logging.py  metrics.py  middleware.py  openapi.py  rate_limit.py  security.py  telemetry.py
src/migrations/: alembic.ini  env.py
src/migrations/versions/: 001_initial.py  002_add_sync_fields.py  003_fix_cloze_cards_back.py
src/modules/auth/: __init__.py  dependencies.py  models.py  schemas.py  service.py
src/modules/cards/: __init__.py  embedding_service.py  models.py  schemas.py  service.py
src/modules/chat/: __init__.py  models.py  schemas.py  service.py
src/modules/decks/: __init__.py  models.py  schemas.py  service.py
src/modules/generation/: __init__.py  schemas.py  service.py
src/modules/prompts/: __init__.py  models.py  schemas.py  service.py
src/modules/sync/: __init__.py  apkg_parser.py  schemas.py  service.py
src/modules/templates/: __init__.py  models.py  schemas.py  service.py
src/modules/users/: __init__.py  models.py  schemas.py  service.py
src/shared/: __init__.py  context.py  mixins.py  repository.py  schemas.py  uuid7.py
src/tests/: __init__.py  conftest.py  factories.py
src/workers/: __init__.py  broker.py  generation.py  indexing.py  main.py  sync.py
(+96 files in other folders)
